# python-sample-package

./: .gitignore  README.md  README.rst  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.ml  tests.yml
doc/: README.md  conf.py  index.rst
doc/gettingstarted/: gettingstarted.ipynb  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/gettingstarted/: gettingstarted.ipynb.txt  index.rst.txt
docs/_sources/subpackage/: index.rst.txt
docs/gettingstarted/: gettingstarted.html  gettingstarted.ipynb  index.html
docs/subpackage/: index.html
samplepackage/: __init__.py  _version.py
samplepackage/data/: testdata.txt
samplepackage/sub_package/: hello_world.py
samplepackage/tests/: README.md  test_basics.py  test_version.py
sampleproject/: _version.py
sampleproject/tests/: test_basics.py
tests/: README.md  test_basics.py  test_version.py
