[metadata]
name = samplepackage
version = 0.1.0
author = Matthias Probst
author_email = matth.probst@gmail.com
description = A python sample package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/python-sample-package
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy>=1.20

[options.extras_require]
scipy =
    scipy>=1.8.1
test =
    pytest
    pytest-cov
docs =
    jupyterlab
    sphinx_book_theme
    nbsphinx
complete =
    %(test)s
    %(docs)s

[options.entry_points]
console_scripts =
    myclfunc = samplepackage:myclfunc

[options.package_data]
samplepackage =
    data/*.txt

[tool:pytest]
python_files = test_*.py
testpaths = samplepackage/tests
